@@ -469,6 +469,7 @@ enum class PromptMode : uint8_t
     SaveBeforeLoad = 0,
     SaveBeforeQuit,
     SaveBeforeQuit2,
+    SaveBeforeNewGame,
     Quit
 };
 
